refactor(cinema, users): decouple domain model from gorm infrastructure
