# backend/core/docs/swagger.json
@@ -3007,7 +3007,7 @@
                 }
             }
         },
-        "domain.Room": {
+        "cinema.Room": {
             "type": "object",
             "properties": {
                 "capacity": {
@@ -3025,15 +3025,15 @@
                 "seats": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.Seat"
+                        "$ref": "#/definitions/cinema.Seat"
                     }
                 },
                 "type": {
-                    "$ref": "#/definitions/domain.RoomType"
+                    "$ref": "#/definitions/cinema.RoomType"
                 }
             }
         },
-        "domain.RoomType": {
+        "cinema.RoomType": {
             "type": "string",
             "enum": [
                 "STANDARD",
@@ -3046,7 +3046,7 @@
                 "RoomTypeVIP"
             ]
         },
-        "domain.Seat": {
+        "cinema.Seat": {
             "type": "object",
             "properties": {
                 "id": {
@@ -3140,7 +3140,7 @@
                 "rooms": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.Room"
+                        "$ref": "#/definitions/cinema.Room"
                     }
                 },
                 "updated_at": {
